--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <div class="header__content">
-            <a href="#" class="header__logo">PELIXS</a>
+            <a href="#" class="header__logo">MOVIEVERSE</a>
    
             <div class="header__actions">
                <i class="ri-notification-2-line"></i>
